--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@line/bot-sdk": "^7.2.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "moment": "^2.29.1",
     "node-fetch": "^2.6.1"
   }
 }
